# LLM_Engg

./: .gitignore  main.py  pyproject.toml
week1/: day1.ipynb  day2.ipynb  day4.ipynb  day5.ipynb  week1_exercise.ipynb
week2/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  web_scraper.py
week3/: all_days.ipynb  day1.ipynb
